chore: optimize category filter handling and ui layout